--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Molengo');
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -5,10 +7,34 @@
   text-align: center;
 }
 
+.app{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.background{
+  height:100vh;
+  width:100%;
+  background: rgb(139,199,166);
+  background: radial-gradient(circle, rgba(139,199,166,1) 0%, rgba(139,149,199,1) 100%);
+}
+
+h1 {
+  font-weight: bold;
+  position: relative;
+  margin: 15px;
+  margin-top: -30px;
+  text-shadow: 1px 1px 1px #1b263b;
+}
+
 .choice-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
+  margin-bottom: 15px;
+  transform: scale(.9);
 }
 
 .choice-box {
@@ -18,8 +44,54 @@
   border-radius: 10px;
   cursor: pointer;
   padding: 15px;
+  font-family:'Molengo', sans-serif;
+  font-size: 1.3rem;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px #1b263b;
 }
 
 .choice-box.selected {
-  background-color: #84ad69;
+  background-color: rgba(109,122,195,.5);
+}
+
+label {
+  display: block;
+  text-align: left;
+  margin-bottom: .5em;
+  font-size: 20px;
+  text-shadow: 1px 1px 1px #1b263b;
+}
+
+.slider-label {
+  display: flex;
+  align-items: left;
+}
+
+.slider-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+input[type="range"] {
+  width: 100%;
+  -webkit-appearance: none;
+  appearance: none; 
+  background-color: #ddd;
+  height: 10px; 
+  border-radius: 5px; 
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none; 
+  appearance: none;
+  width: 15px; 
+  height: 20px; 
+  background-color: rgba(109,122,195);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+h6 {
+  margin-top: 5px;
 }
