--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -113,3 +113,57 @@ h6 {
   outline: none;
   background-color: rgba(64,57,111,255);
 }
+
+.close-modal h2 {
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 70px;
+  font-weight: bold;
+  margin-top: 50px;
+  color: rgba(109,122,195);
+  text-shadow: 1px 1px 1px rgba(64,57,111,255);
+}
+
+.close-modal h3 {
+  align-self: top;
+  font-size: 45px;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px rgba(64,57,111,255);
+}
+
+.meals-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  border-radius: 10px 100px / 120px;
+  gap: 20px;
+  margin-top: 100px;
+  padding: 15px;
+}
+
+.box {
+  width: 100%;
+  height: 23rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(109,122,195,.5);
+  border: 1.5px solid rgba(64,57,111,.5);
+}
+
+.close-modal button {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  margin-bottom: 15px;
+  transform: translateX(-50%);
+  background-color: rgba(109,122,195);
+}
+
+.close-modal button:active, 
+.close-modal button:focus,
+.close-modal button:hover {
+  outline: none;
+  background-color: rgba(64,57,111,255);
+}
